tests/rosetta/out/Zig/biorhythms.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenbiorhythms3009772655/001/prog.zig:103:8: error: expected 'while', 'for', 'inline', or '{', found 'an identifier'
